--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "zizaco/entrust": "5.2.x-dev",
-		"laravelcollective/html": "5.2"
+		"laravelcollective/html": "5.2",
+        "hootlex/laravel-moderation": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
